2012-11-26  Hani Benhabiles <kroosec@gmail.com>

	* src/gsad.c (init_validator): Added export_slave and export_slaves
	values. Added slave to possible values of resource_type and
	optional_resource_type.
	(export_omp_get): Added handlers for export_slave and export_slaves
	commands.

	* src/gsad_omp.c (next_page): Added handler for get_slaves value.

2012-11-26  Hani Benhabiles <kroosec@gmail.com>

	* src/html/omp.xsl (html-slaves-table): Refactored code to use
	list-window.
	(create_slave_response): Added links to each slave details page in the
	list.
	(slave): Refactored code to use list-window-line-icons.
	(get_slaves): Added code to test for 4xx and 5xx status responses.

2012-11-26  Hani Benhabiles <kroosec@gmail.com>

	* src/gsad_omp.c (export_filter_omp): Fixed documentation.

2012-11-26  Hani Benhabiles <kroosec@gmail.com>

	* src/gsad_omp.c (edit_slave, edit_slave_omp, export_slave_omp)
	(export_slaves_omp): New functions.

2012-11-26  Henri Doreau <henri.doreau@greenbone.net>

	* src/gsad_omp.c (save_task_omp, save_container_task_omp): Removed
	set-but-unused variables to get rid of the corresponding GCC warning.

2012-11-26  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (save_lsc_credential_omp, delete_alert_omp)
	(test_alert_omp, new_target_omp, create_target_omp, get_targets_omp)
	(save_target_omp, get_my_settings, edit_my_settings, save_my_settings)
	(new_filter, create_filter_omp): Close connection after use.

	* src/gsad_oap.c (edit_user_oap, get_user_oap, get_users_oap)
	(get_feed_oap, get_scan_oap, sync_feed_oap, sync_scap_oap)
	(get_settings_oap): Close connection after use.

2012-11-24  Hani Benhabiles <kroosec@gmail.com>

	* src/gsad_omp.c (delete_schedule_omp, delete_trash_schedule_omp)
	(delete_target_omp, delete_trash_target_omp): Refactored to use
	delete_resource accordingly.

2012-11-24  Hani Benhabiles <kroosec@gmail.com>

	* src/gsad_omp.c (get_slave, get_slaves): New functions.