@@ -1,3 +1,8 @@
+2012-11-27  Hani Benhabiles <kroosec@gmail.com>
+
+	* src/gsad_omp.h, src/gsad_omp.c (save_slave_omp): New function.
+	src/gsad.c (init_validator, exec_omp_post): Added edit_slave and save_slave values.
+
 2012-11-26  Hani Benhabiles <kroosec@gmail.com>
 
 	* src/gsad.c (init_validator): Added export_slave and export_slaves
